# piatui

./: Cargo.toml  README.md
crates/pia-rs/: Cargo.toml  LICENSE-MIT
crates/pia-rs/src/: connection.rs  data.rs  lang.rs  lib.rs  util.rs
crates/pia-rs/src/event/: data.rs  mod.rs  state.rs  util.rs
crates/pia-rs/src/event/client/: mod.rs
crates/pia-rs/src/event/daemon/: data.rs  mod.rs  state.rs  util.rs
crates/pia-rs/src/jsonrpc/: mod.rs  unix.rs
crates/piatui/: Cargo.toml  LICENSE-APACHE
crates/piatui/src/: app.rs  connection.rs  main.rs
scripts/: translate.py
