[package]
name = "pia-rs"
version = "0.1.0"
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
edition.workspace = true
license.workspace = true


[lib]

[dependencies]
cfg-if = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
