[package]
name = "piatui"
version = "0.1.0"
authors = ["Colin Cai <therealcreative0708@gmail.com>"]
license.workspace = true
edition.workspace = true

[dependencies]
pia-rs = { path = "../pia-rs" }
ratatui = "0.28.0"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
